--- a/boards/arm/npcm400f_evb/npcm400f_evb.dts
+++ b/boards/arm/npcm400f_evb/npcm400f_evb.dts
@@ -117,6 +117,11 @@
 	status = "okay";
 };
 
+&i2c2a {
+	clock-frequency = <I2C_BITRATE_STANDARD>;
+	status = "okay";
+};
+
 &i2c3a {
 	clock-frequency = <I2C_BITRATE_FAST>;
 	status = "okay";
@@ -137,8 +142,48 @@
 	status = "disabled";
 };
 
+&i2c7a {
+	clock-frequency = <I2C_BITRATE_STANDARD>;
+	status = "okay";
+};
+
+&i2c8a {
+	clock-frequency = <I2C_BITRATE_STANDARD>;
+	status = "okay";
+};
+
+&i2c9a {
+	clock-frequency = <I2C_BITRATE_STANDARD>;
+	status = "okay";
+};
+
+&i2c10a {
+	clock-frequency = <I2C_BITRATE_STANDARD>;
+	status = "okay";
+};
+
+&i2c11a {
+	clock-frequency = <I2C_BITRATE_STANDARD>;
+	status = "okay";
+};
+
+&i2c12a {
+	clock-frequency = <I2C_BITRATE_STANDARD>;
+	status = "okay";
+};
+
 &i2c1b {
 	clock-frequency = <700000>;
+	status = "disabled";
+};
+
+&i2c4b {
+	clock-frequency = <I2C_BITRATE_STANDARD>;
+	status = "disabled";
+};
+
+&i2c6b {
+	clock-frequency = <I2C_BITRATE_STANDARD>;
 	status = "disabled";
 };
 
