--- a/dts/arm/nuvoton/npcm4xx.dtsi
+++ b/dts/arm/nuvoton/npcm4xx.dtsi
@@ -313,6 +313,18 @@
 			status = "disabled";
 		};
 
+		i2c2a: i2c_a@40006200 {
+			compatible = "nuvoton,npcm4xx-i2c";
+			#address-cells = <1>;
+			#size-cells = <0>;
+			reg = <0x40006200 0x200>;
+			interrupts = <0 3>;
+			clocks = <&pcc NPCM4XX_CLOCK_BUS_APB3 NPCM4XX_PWDWN_CTL3 1>;
+			pinctrl-0 = <&pinctrl_i2c2a_default>;
+			label = "I2C_1";
+			status = "disabled";
+		};
+
 		i2c3a: i2c_a@40006400 {
 			compatible = "nuvoton,npcm4xx-i2c";
 			#address-cells = <1>;
@@ -321,7 +333,7 @@
 			interrupts = <37 3>;
 			clocks = <&pcc NPCM4XX_CLOCK_BUS_APB3 NPCM4XX_PWDWN_CTL3 2>;
 			pinctrl-0 = <&pinctrl_i2c3a_default>;
-			label = "I2C_1";
+			label = "I2C_2";
 			status = "disabled";
 		};
 
@@ -333,7 +345,7 @@
 			interrupts = <38 3>;
 			clocks = <&pcc NPCM4XX_CLOCK_BUS_APB3 NPCM4XX_PWDWN_CTL3 3>;
 			pinctrl-0 = <&pinctrl_i2c4a_default>;
-			label = "I2C_2";
+			label = "I2C_3";
 			status = "disabled";
 		};
 
@@ -345,7 +357,7 @@
 			interrupts = <39 3>;
 			clocks = <&pcc NPCM4XX_CLOCK_BUS_APB3 NPCM4XX_PWDWN_CTL3 4>;
 			pinctrl-0 = <&pinctrl_i2c5a_default>;
-			label = "I2C_3";
+			label = "I2C_4";
 			status = "disabled";
 		};
 
@@ -357,7 +369,79 @@
 			interrupts = <20 3>;
 			clocks = <&pcc NPCM4XX_CLOCK_BUS_APB3 NPCM4XX_PWDWN_CTL3 5>;
 			pinctrl-0 = <&pinctrl_i2c6a_default>;
-			label = "I2C_4";
+			label = "I2C_5";
+			status = "disabled";
+		};
+
+		i2c7a: i2c_a@40006c00 {
+			compatible = "nuvoton,npcm4xx-i2c";
+			#address-cells = <1>;
+			#size-cells = <0>;
+			reg = <0x40006c00 0x200>;
+			interrupts = <70 3>;
+			clocks = <&pcc NPCM4XX_CLOCK_BUS_APB3 NPCM4XX_PWDWN_CTL7 0>;
+			pinctrl-0 = <&pinctrl_i2c7a_default>;
+			label = "I2C_6";
+			status = "disabled";
+		};
+
+		i2c8a: i2c_a@40006e00 {
+			compatible = "nuvoton,npcm4xx-i2c";
+			#address-cells = <1>;
+			#size-cells = <0>;
+			reg = <0x40006e00 0x200>;
+			interrupts = <71 3>;
+			clocks = <&pcc NPCM4XX_CLOCK_BUS_APB3 NPCM4XX_PWDWN_CTL7 1>;
+			pinctrl-0 = <&pinctrl_i2c8a_default>;
+			label = "I2C_7";
+			status = "disabled";
+		};
+
+		i2c9a: i2c_a@40007000 {
+			compatible = "nuvoton,npcm4xx-i2c";
+			#address-cells = <1>;
+			#size-cells = <0>;
+			reg = <0x40007000 0x200>;
+			interrupts = <72 3>;
+			clocks = <&pcc NPCM4XX_CLOCK_BUS_APB3 NPCM4XX_PWDWN_CTL7 2>;
+			pinctrl-0 = <&pinctrl_i2c9a_default>;
+			label = "I2C_8";
+			status = "disabled";
+		};
+
+		i2c10a: i2c_a@40007200 {
+			compatible = "nuvoton,npcm4xx-i2c";
+			#address-cells = <1>;
+			#size-cells = <0>;
+			reg = <0x40007200 0x200>;
+			interrupts = <73 3>;
+			clocks = <&pcc NPCM4XX_CLOCK_BUS_APB3 NPCM4XX_PWDWN_CTL7 3>;
+			pinctrl-0 = <&pinctrl_i2c10a_default>;
+			label = "I2C_9";
+			status = "disabled";
+		};
+
+		i2c11a: i2c_a@40007400 {
+			compatible = "nuvoton,npcm4xx-i2c";
+			#address-cells = <1>;
+			#size-cells = <0>;
+			reg = <0x40007400 0x200>;
+			interrupts = <74 3>;
+			clocks = <&pcc NPCM4XX_CLOCK_BUS_APB3 NPCM4XX_PWDWN_CTL7 4>;
+			pinctrl-0 = <&pinctrl_i2c11a_default>;
+			label = "I2C_10";
+			status = "disabled";
+		};
+
+		i2c12a: i2c_a@40007600 {
+			compatible = "nuvoton,npcm4xx-i2c";
+			#address-cells = <1>;
+			#size-cells = <0>;
+			reg = <0x40007600 0x200>;
+			interrupts = <75 3>;
+			clocks = <&pcc NPCM4XX_CLOCK_BUS_APB3 NPCM4XX_PWDWN_CTL7 5>;
+			pinctrl-0 = <&pinctrl_i2c12a_default>;
+			label = "I2C_11";
 			status = "disabled";
 		};
 
@@ -370,6 +454,30 @@
 			clocks = <&pcc NPCM4XX_CLOCK_BUS_APB3 NPCM4XX_PWDWN_CTL3 0>;
 			pinctrl-0 = <&pinctrl_i2c1b_default>;
 			label = "I2C_0";
+			status = "disabled";
+		};
+
+		i2c4b: i2c_b@40006600 {
+			compatible = "nuvoton,npcm4xx-i2c";
+			#address-cells = <1>;
+			#size-cells = <0>;
+			reg = <0x40006600 0x200>;
+			interrupts = <38 3>;
+			clocks = <&pcc NPCM4XX_CLOCK_BUS_APB3 NPCM4XX_PWDWN_CTL3 3>;
+			pinctrl-0 = <&pinctrl_i2c4b_default>;
+			label = "I2C_3";
+			status = "disabled";
+		};
+
+		i2c6b: i2c_b@40006a00 {
+			compatible = "nuvoton,npcm4xx-i2c";
+			#address-cells = <1>;
+			#size-cells = <0>;
+			reg = <0x40006a00 0x200>;
+			interrupts = <20 3>;
+			clocks = <&pcc NPCM4XX_CLOCK_BUS_APB3 NPCM4XX_PWDWN_CTL3 5>;
+			pinctrl-0 = <&pinctrl_i2c6b_default>;
+			label = "I2C_5";
 			status = "disabled";
 		};
 
