--- a/dts/arm/nuvoton/npcm4xx/npcm4xx-pinctrl.dtsi
+++ b/dts/arm/nuvoton/npcm4xx/npcm4xx-pinctrl.dtsi
@@ -8,10 +8,19 @@
 	pinctrl_uart1_default: uart1_default {};
 	pinctrl_i2c1a_default: i2c1a_default {};
 	pinctrl_i2c1b_default: i2c1b_default {};
+	pinctrl_i2c2a_default: i2c2a_default {};
 	pinctrl_i2c3a_default: i2c3a_default {};
 	pinctrl_i2c4a_default: i2c4a_default {};
+	pinctrl_i2c4b_default: i2c4b_default {};
 	pinctrl_i2c5a_default: i2c5a_default {};
 	pinctrl_i2c6a_default: i2c6a_default {};
+	pinctrl_i2c6b_default: i2c6b_default {};
+	pinctrl_i2c7a_default: i2c7a_default {};
+	pinctrl_i2c8a_default: i2c8a_default {};
+	pinctrl_i2c9a_default: i2c9a_default {};
+	pinctrl_i2c10a_default: i2c10a_default {};
+	pinctrl_i2c11a_default: i2c11a_default {};
+	pinctrl_i2c12a_default: i2c12a_default {};
 	pinctrl_peci0_default: peci0_default {};
 	pinctrl_shd_spi_default: shd_spi_default{};
 	pinctrl_shd_spi_quad: shd_spi_quad{};
