soc: arm: npcm4xx: support MPU feature
support MPU feature.

1. move copy sram vector table before config MPU.
2. place sram vector table to SECTIONS link.
3. add MPU range for sram vector table that used when program
   spim flash.

Signed-off-by: cpchiang <cpchiang1@nuvoton.com>

--- a/soc/arm/npcm4xx/common/CMakeLists.txt
+++ b/soc/arm/npcm4xx/common/CMakeLists.txt
@@ -12,7 +12,7 @@ zephyr_sources_ifdef(CONFIG_XIP
 )
 
 zephyr_linker_sources_ifdef(CONFIG_XIP
-  RAM_SECTIONS
+  SECTIONS
   SORT_KEY 0
   npcm4xx_sram_vector_table.ld
 )
