subsys: shell: modules: add memory read/write command
add memory read/write command, sync from openbic-v2.6

Signed-off-by: cpchiang <cpchiang1@nuvoton.com>

--- a/subsys/shell/modules/Kconfig
+++ b/subsys/shell/modules/Kconfig
@@ -38,3 +38,9 @@ config DATE_SHELL
 	default y if !SHELL_MINIMAL
 	help
 	  This shell provides access to date and time based on Unix time.
+
+config MEM_SHELL
+	bool "Enable memory shell"
+	default y
+	help
+	  This shell provides access to memory
