board: arm: npcm400f_evb: change jtagm gpio group
change jtagm gpio group.

GPIOF0 and GPIOF1 may use by I2C4B.

Signed-off-by: cpchiang <cpchiang1@nuvoton.com>

--- a/boards/arm/npcm400f_evb/npcm400f_evb.dts
+++ b/boards/arm/npcm400f_evb/npcm400f_evb.dts
@@ -271,10 +271,10 @@
 };
 
 &jtag1 {
-	tck-gpios = <&gpiof 0 (GPIO_PUSH_PULL | GPIO_ACTIVE_HIGH)>;
-	tdi-gpios = <&gpiof 1 (GPIO_PUSH_PULL | GPIO_ACTIVE_HIGH)>;
-	tdo-gpios = <&gpiof 2 (GPIO_ACTIVE_HIGH)>;
-	tms-gpios = <&gpiof 3 (GPIO_PUSH_PULL | GPIO_ACTIVE_HIGH)>;
+	tck-gpios = <&gpio0 0 (GPIO_PUSH_PULL | GPIO_ACTIVE_HIGH)>;
+	tdi-gpios = <&gpio0 1 (GPIO_PUSH_PULL | GPIO_ACTIVE_HIGH)>;
+	tdo-gpios = <&gpio0 2 (GPIO_ACTIVE_HIGH)>;
+	tms-gpios = <&gpio0 3 (GPIO_PUSH_PULL | GPIO_ACTIVE_HIGH)>;
 	status = "okay";
 };
 
