dts: arm: npcm4xx: enable cr_uart2 module
Enable cr_uart2 module.

Signed-off-by: Tyrone Ting <kfting@nuvoton.com>

--- a/boards/arm/npcm400f_evb/npcm400f_evb.dts
+++ b/boards/arm/npcm400f_evb/npcm400f_evb.dts
@@ -60,6 +60,11 @@
 	current-speed = <115200>;
 };
 
+&uart1 {
+	status = "okay";
+	current-speed = <115200>;
+};
+
 &peci0 {
 	status = "okay";
 	pinctrl-0 = <&pinctrl_peci0_default>;
