drivers: usb: add usb shell
add below config to enable usb cdc acm for test.
CONFIG_USB=y
CONFIG_SHELL_CMDS_USB=y
CONFIG_USB_DEVICE_STACK=y
CONFIG_USB_DEVICE_PRODUCT="Zephyr CDC ACM"
CONFIG_USB_CDC_ACM=y
CONFIG_USB_CDC_ACM_RINGBUF_SIZE=576
CONFIG_USB_DEVICE_VID=0x1d6b
CONFIG_USB_DEVICE_PID=0x0104

shell command:
usb enable

test ok with nuvoton arbel 845 usb host.

Signed-off-by: cpchiang <cpchiang1@nuvoton.com>

--- a/drivers/usb/Kconfig
+++ b/drivers/usb/Kconfig
@@ -8,4 +8,13 @@ menuconfig USB
 	help
 	  Enable USB drivers.
 
+if SHELL && USB
+
+config SHELL_CMDS_USB
+	bool "Enable USB shell commands"
+	help
+	  Enable usb shell commands to test driver.
+
+endif # SHELL && USB
+
 source "drivers/usb/device/Kconfig"
