driver: i2c: add i2c support in npcm series.
The NPCM SMB modules provides full support for a two-wire SMBus/I2C
synchronous serial interface. Each SMBus/I2C interface is a two-wire
serial interface that is compatible with both Intel SMBus and Philips
I2C physical layer. There are 12 SMBus modules and 15 buses in NPCM4
series.

In NPCM4 series, the SMB1, SMB4 and SMB6 modules contain a two-way
switch to support two separate SMBus/I2C buses (ports) with one SMB
module (controller). Please refer Section 4.7.1 in the datasheet.

All of modules have separate 32-byte transmit FIFO and 32-byte receive
FIFO buffers. These FIFO buffers reduce firmware overhead during long
SMBus transactions by allowing the Core to write or read more than one
data byte at a time to/from the SMB module.

The CL includes:
— Add npcm i2c device tree declarations.
— Zephyr i2c api implementation.

Signed-off-by: Tyrone Ting <kfting@nuvoton.com>

--- a/boards/nuvoton/npcm400f_evb/npcm400f_evb.dts
+++ b/boards/nuvoton/npcm400f_evb/npcm400f_evb.dts
@@ -69,3 +69,108 @@
 		     &adc_vin3_gp95>; /* VIN3 - D6 */
 	pinctrl-names = "default";
 };
+
+&i2c1a {
+	status = "okay";
+	pinctrl-0 = <&i2c1a_scl_sda_gp60_61>;
+	pinctrl-names = "default";
+	clock-frequency = <I2C_BITRATE_STANDARD>;
+};
+
+&i2c2a {
+	status = "okay";
+	pinctrl-0 = <&i2c2a_scl_sda_gp11_13>;
+	pinctrl-names = "default";
+	clock-frequency = <I2C_BITRATE_STANDARD>;
+};
+
+&i2c3a {
+	status = "okay";
+	pinctrl-0 = <&i2c3a_scl_sda_gpa7_a2>;
+	pinctrl-names = "default";
+	clock-frequency = <I2C_BITRATE_STANDARD>;
+};
+
+&i2c4a {
+	status = "okay";
+	pinctrl-0 = <&i2c4a_scl_sda_gp36_37>;
+	pinctrl-names = "default";
+	clock-frequency = <I2C_BITRATE_STANDARD>;
+};
+
+&i2c5a {
+	status = "okay";
+	pinctrl-0 = <&i2c5a_scl_sda_gp34_35>;
+	pinctrl-names = "default";
+	clock-frequency = <I2C_BITRATE_STANDARD>;
+};
+
+&i2c6a {
+	status = "disabled";
+	pinctrl-0 = <&i2c6a_scl_gp96 &i2c6a_sda_gp97>;
+	pinctrl-names = "default";
+	clock-frequency = <I2C_BITRATE_STANDARD>;
+};
+
+&i2c7a {
+	status = "okay";
+	pinctrl-0 = <&i2c7a_scl_sda_gpc2_c3>;
+	pinctrl-names = "default";
+	clock-frequency = <I2C_BITRATE_STANDARD>;
+};
+
+&i2c8a {
+	status = "okay";
+	pinctrl-0 = <&i2c8a_scl_sda_gpc6_c7>;
+	pinctrl-names = "default";
+	clock-frequency = <I2C_BITRATE_STANDARD>;
+};
+
+&i2c9a {
+	status = "okay";
+	pinctrl-0 = <&i2c9a_scl_sda_gp32_33>;
+	pinctrl-names = "default";
+	clock-frequency = <I2C_BITRATE_STANDARD>;
+};
+
+&i2c10a {
+	status = "okay";
+	pinctrl-0 = <&i2c10a_scl_sda_gpd2_d3>;
+	pinctrl-names = "default";
+	clock-frequency = <I2C_BITRATE_STANDARD>;
+};
+
+&i2c11a {
+	status = "okay";
+	pinctrl-0 = <&i2c11a_scl_sda_gpd4_d5>;
+	pinctrl-names = "default";
+	clock-frequency = <I2C_BITRATE_STANDARD>;
+};
+
+&i2c12a {
+	status = "okay";
+	pinctrl-0 = <&i2c12a_scl_sda_gpd6_d7>;
+	pinctrl-names = "default";
+	clock-frequency = <I2C_BITRATE_STANDARD>;
+};
+
+&i2c1b {
+	status = "disabled";
+	pinctrl-0 = <&i2c1b_scl_sda_gp26_25>;
+	pinctrl-names = "default";
+	clock-frequency = <I2C_BITRATE_STANDARD>;
+};
+
+&i2c4b {
+	status = "disabled";
+	pinctrl-0 = <&i2c4b_scl_sda_gpf0_f1>;
+	pinctrl-names = "default";
+	clock-frequency = <I2C_BITRATE_STANDARD>;
+};
+
+&i2c6b {
+	status = "disabled";
+	pinctrl-0 = <&i2c6b_scl_sda_gp16_17>;
+	pinctrl-names = "default";
+	clock-frequency = <I2C_BITRATE_STANDARD>;
+};
