--- a/drivers/i2c/CMakeLists.txt
+++ b/drivers/i2c/CMakeLists.txt
@@ -76,6 +76,8 @@ zephyr_library_sources_ifdef(CONFIG_I2C_STM32_V2
 	i2c_ll_stm32.c
 	)
 
+zephyr_library_sources_ifdef(CONFIG_I2C_NPCM		i2c_npcm.c)
+
 zephyr_library_sources_ifdef(CONFIG_I2C_TEST		i2c_test.c)
 
 zephyr_library_sources_ifdef(CONFIG_USERSPACE		i2c_handlers.c)
