--- a/drivers/i2c/Kconfig
+++ b/drivers/i2c/Kconfig
@@ -127,6 +127,7 @@ source "drivers/i2c/Kconfig.ambiq"
 source "drivers/i2c/Kconfig.numaker"
 source "drivers/i2c/Kconfig.mcux"
 source "drivers/i2c/Kconfig.ene"
+source "drivers/i2c/Kconfig.npcm"
 
 config I2C_INIT_PRIORITY
 	int "Init priority"
