soc: npcm: add gdma driver
Signed-off-by: Tyrone Ting <kfting@nuvoton.com>

--- a/soc/nuvoton/npcm/npcm4/CMakeLists.txt
+++ b/soc/nuvoton/npcm/npcm4/CMakeLists.txt
@@ -10,6 +10,7 @@ zephyr_include_directories(
 
 zephyr_sources(
   soc.c
+  gdma.c
 )
 
 set(SOC_LINKER_SCRIPT ${ZEPHYR_BASE}/include/zephyr/arch/arm/cortex_m/scripts/linker.ld CACHE INTERNAL "")
